creusot/tests/should_fail/prusti/blocked_lifetime/clause2.stderr
error[creusot]: Invalid dereference
 --> clause2.rs:4:12
  |
4 | #[ensures(*x == 0u32)]
  |            ^

error: aborting due to previous error

